service remains after exit

--- a/bind9-resolvconf.service
+++ b/bind9-resolvconf.service
@@ -8,6 +8,7 @@ ConditionFileIsExecutable=/sbin/resolvconf
 [Service]
 ExecStart=/bin/sh -c 'echo nameserver 127.0.0.1 | /sbin/resolvconf -a lo.named'
 ExecStop=/sbin/resolvconf -d lo.named
+RemainAfterExit=yes
 
 [Install]
 WantedBy=bind9.service
